# tsmd-evaluation

./: LICENSE  README.md  benchmark_generation.py  clustering_classification_datasets.ipynb  evaluation.py  example.ipynb  pyproject.toml  setup.py
notebooks/: clustering_classification_datasets.ipynb  evaluation_metrics_example.ipynb  generating_the_benchmark.ipynb  random_walk_experiment.ipynb
tsmd_evaluation/: benchmark_generation.py  correctness.py  prom.py  score.py
